--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 
    <script>
         document.addEventListener("DOMContentLoaded", function() {
-            history.replaceState({}, "", "/feb/financas/formularioAFE");
+            history.replaceState({}, "", "/formularioAFE");
         });
     </script>
 
