--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 
         <h1>AUXÍLIO FINANCEIRO A ESTUDANTE - 2025</h1>
 		<form id="formulario" autocomplete="off">
+		
             <!-- Campos Pessoais -->
 			    <div class="form-group">
                 <label for="termoResponsabilidade">Termo de Responsabilidade</label>
@@ -327,38 +328,36 @@
 
 
 	<script>
-		document.addEventListener('DOMContentLoaded', function() {
-		  document.getElementById('formulario').addEventListener('submit', function(event) {
-			event.preventDefault(); // Previne o envio padrão do formulário
+			document.getElementById('formulario').addEventListener('submit', function(event) {
+				event.preventDefault(); // Previne o envio padrão do formulário
 
-			// Obtendo os dados do formulário
-			var dados = new FormData(document.getElementById('formulario'));
-			var formData = new URLSearchParams();
+				// Obtendo os dados do formulário
+				var dados = new FormData(document.getElementById('formulario'));
+				var formData = new URLSearchParams();
 
-			// Convertendo os dados do FormData para URLSearchParams (chave-valor)
-			dados.forEach(function(value, key) {
-			  formData.append(key, value);
+				// Convertendo os dados do FormData para URLSearchParams (chave-valor)
+				dados.forEach(function(value, key) {
+					formData.append(key, value);
+				});
+
+				// Fazendo a requisição com fetch
+				fetch('https://script.google.com/macros/s/AKfycbxW3UDISq4Bs1AhRpVo7eqpbcogjw7t4juB8MFmQv34vkmje-vwIvdgkUAJj4WxsI_00w/exec', {
+					method: 'POST',
+					headers: {
+						'Content-Type': 'application/x-www-form-urlencoded', // Tipo de conteúdo
+					},
+					body: formData.toString(), // Envia os dados como query string
+					mode: 'no-cors' // Usando no-cors para depuração
+				})
+				.then(response => response.json()) // Resposta em JSON
+				.then(data => {
+					console.log('Resposta do servidor:', data);
+				})
+				.catch(error => {
+					console.error('Erro:', error);
+				});
 			});
-
-			// Fazendo a requisição com fetch
-			fetch('https://script.google.com/macros/s/AKfycbxW3UDISq4Bs1AhRpVo7eqpbcogjw7t4juB8MFmQv34vkmje-vwIvdgkUAJj4WxsI_00w/exec', {
-			  method: 'POST',
-			  headers: {
-				'Content-Type': 'application/x-www-form-urlencoded', // Tipo de conteúdo
-			  },
-			  body: formData.toString(), // Envia os dados como query string
-			  mode: 'cors' // Habilita CORS para permitir requisições de outros domínios
-			})
-			.then(response => response.text()) // Resposta como texto simples
-			.then(data => {
-			  alert('Resposta do servidor: ' + data); // Exibe a resposta do servidor
-			})
-			.catch(error => {
-			  console.error('Erro:', error); // Exibe o erro caso ocorra
-			});
-		  });
-		});
-	  </script>
+	</script>	
 
 
 
