--- a/index.html
+++ b/index.html
@@ -327,37 +327,40 @@
 
 
 
-	<script>
-			document.getElementById('formulario').addEventListener('submit', function(event) {
-				event.preventDefault(); // Previne o envio padrão do formulário
+<script>
+  document.getElementById('formulario').addEventListener('submit', function(event) {
+    event.preventDefault(); // Previne o envio padrão do formulário
 
-				// Obtendo os dados do formulário
-				var dados = new FormData(document.getElementById('formulario'));
-				var formData = new URLSearchParams();
+    // Obtendo os dados do formulário
+    var dados = new FormData(document.getElementById('formulario'));
+    var formData = new URLSearchParams();
 
-				// Convertendo os dados do FormData para URLSearchParams (chave-valor)
-				dados.forEach(function(value, key) {
-					formData.append(key, value);
-				});
+    // Convertendo os dados do FormData para URLSearchParams (chave-valor)
+    dados.forEach(function(value, key) {
+      formData.append(key, value);
+    });
 
-				// Fazendo a requisição com fetch
-				fetch('https://script.google.com/macros/s/AKfycbxW3UDISq4Bs1AhRpVo7eqpbcogjw7t4juB8MFmQv34vkmje-vwIvdgkUAJj4WxsI_00w/exec', {
-					method: 'POST',
-					headers: {
-						'Content-Type': 'application/x-www-form-urlencoded', // Tipo de conteúdo
-					},
-					body: formData.toString(), // Envia os dados como query string
-					mode: 'no-cors' // Usando no-cors para depuração
-				})
-				.then(response => response.json()) // Resposta em JSON
-				.then(data => {
-					console.log('Resposta do servidor:', data);
-				})
-				.catch(error => {
-					console.error('Erro:', error);
-				});
-			});
-	</script>	
+    // Fazendo a requisição com fetch
+    fetch('https://script.google.com/macros/s/AKfycbxW3UDISq4Bs1AhRpVo7eqpbcogjw7t4juB8MFmQv34vkmje-vwIvdgkUAJj4WxsI_00w/exec', {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/x-www-form-urlencoded', // Tipo de conteúdo
+      },
+      body: formData.toString(), // Envia os dados como query string
+      mode: 'no-cors' // Usando no-cors para depuração
+    })
+    .then(function(response) {
+      // Isso garante que a resposta seja tratada corretamente
+      return response.json(); // Verifica se a resposta é válida
+    })
+    .then(function(data) {
+      console.log('Resposta do servidor:', data);
+    })
+    .catch(function(error) {
+      console.error('Erro:', error); // Aqui você captura qualquer erro
+    });
+  });
+</script>
 
 
 
