--- a/index.html
+++ b/index.html
@@ -369,11 +369,11 @@
 
 
 
-   <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            history.replaceState({}, "", "/formularioAFE");
-        });
-    </script>
+//   <script>
+//        document.addEventListener("DOMContentLoaded", function() {
+//            history.replaceState({}, "", "/formularioAFE");
+//        });
+//    </script>
 
 
 
