--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         font-size: 14px; /* Tamanho da fonte */
         line-height: 1.6; /* Espaçamento entre as linhas */
         color: #555; /* Cor do texto */
-        height: 220px; /* Altura fixa da caixa */
+        height: 190px; /* Altura fixa da caixa */
 	    font-size: 14px; /* Tamanho da fonte */
         background-color: #DDECF7; /* Cor de fundo */
     }
@@ -230,15 +230,13 @@
                 Ao concordar com os termos, você estará ciente e de acordo com as condições estabelecidas para o auxílio financeiro.
             </p>
                 <strong>Termo de Responsabilidade:</strong>
-                "Declaro estar de acordo quanto à correta utilização do auxílio financeiro destinado a cobrir exclusivamente os gastos com hospedagem e alimentação, assumindo total responsabilidade pelas informações prestadas."
+                Declaro estar de acordo quanto à correta utilização do auxílio financeiro destinado a cobrir exclusivamente os gastos com hospedagem e alimentação, assumindo total responsabilidade pelas informações prestadas.
             </p>
             <p>
-                <strong>Importante:</strong> A escolha "NÃO CONCORDO" impedirá o envio do formulário.
-		
 				</p></p></p>
 				
                 <select id="termoResponsabilidade" name="termoResponsabilidade" required onchange="markAsFilled(this)" autocomplete="off">
-                    <option value="">SELECIONE UMA OPÇÃO</option>
+                    <option value="">SELECIONE A OPÇÃO</option>
                     <option value="CONCORDO">CONCORDO</option>
                 </select>
 										
