atualização dos labels

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 					<input type="text" id="nomeCivil" name="nomeCivil" oninput="maiusculas(this); markAsFilled(this)" required autocomplete="off">
 				</div>
 				<div class="form-group">
-					<label for="nomeSocial">NOME SOCIAL</label>
+					<label for="nomeSocial">NOME SOCIAL (CASO POSSUA)</label>
 					<input type="text" id="nomeSocial" name="nomeSocial" autocomplete="off" oninput="maiusculas(this); markAsFilled(this)">
 				</div>
 			</div>
@@ -509,11 +509,11 @@
 			
 			<div class="form-group-row">
             <div class="form-group" style="flex: 1;">
-                <label for="inicio">DATA DE INÍCIO</label>
+                <label for="inicio">INÍCIO DA PARTICIPAÇÃO</label>
                 <input type="date" id="inicio" name="inicio" required onchange="markAsFilled(this)" autocomplete="off" min="">
 			</div>
 			<div class="form-group" style="flex: 1;">
-                <label for="termino">DATA DE TÉRMINO</label>
+                <label for="termino">TÉRMINO DA PARTICIPAÇÃO</label>
                 <input type="date" id="termino" name="termino" required onchange="markAsFilled(this)" autocomplete="off" min="">
             </div>
 			<div class="form-group" style="flex: 1;">
